Extract pojo to store BasePointsEventData instead of a string. Add websocket handler to sent base point events to the frontend using websockets.